--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,27 +1,29 @@
 
 body {
-  background-image: url(image/liquid-cheese.svg);
+  background-image: url(/image/liquid-cheese.svg);
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 100vh;
 }
 
 
 .menu-bx {
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  background-color: #2f363e; 
 }
 
 .menu-bx ul {
   display: flex;
   position: absolute;
-  
+  justify-content: center;
+  align-items: center;  
+  gap: 1.7rem; 
 }
 
 ul a {
   text-decoration: none;
   color: white;
   font-size: 1.3rem;
-  
 }
 
 ul li {
@@ -29,8 +31,23 @@ ul li {
   
 } 
 
-.menu-bx ul li img {
-  height: 2rem;
-  width: 2rem;  
-  
-} 
+main img {
+  position: relative;
+  top: 12rem;
+  left: 12rem;
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  box-shadow: 25px 25px 75px rgba(0,0,0,0.25), 10px 10px 70px rgba(0,0,0,0.25), inset 5px 5px 10px rgba(0,0,0,0.5), inset 5px 5px 20px rgba(255,255,255,0.2), inset -5px -5px 15px rgba(0,0,0,0.75); 
+}
+
+.about-text {
+  position: relative;
+  top: -8rem;
+  left: 40rem;
+  max-width: 25rem;
+  max-height: 25rem;
+  color: white;
+  font-size: 1.3rem;
+  box-shadow: 25px 25px 75px rgba(0,0,0,0.25), 10px 10px 70px rgba(0,0,0,0.25), inset 5px 5px 10px rgba(0,0,0,0.5), inset 5px 5px 20px rgba(255,255,255,0.2), inset -5px -5px 15px rgba(0,0,0,0.75); 
+}
