--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Tangerine:wght@700&display=swap');
+
 
 body {
   background-image: url(/image/sun-tornado.svg);
@@ -60,6 +62,12 @@ h1 {
   margin-bottom: -1rem;
 }
 
+.header2 {
+  font-family: 'Tangerine', cursive;
+  font-size: 2rem;
+  margin-top: -0.4rem;
+}
+
 main img {
   height: 2rem;
   width: 2rem;
@@ -86,6 +94,7 @@ form input {
 
 form textarea {
   padding-left: 0.5rem;
+  resize: none;
 }
 
 #send {
