--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Tangerine:wght@700&display=swap');
 
-
 body {
   background-image: url(/image/sun-tornado.svg);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
 }
-
 
 .menu-bx {
   position: absolute;
@@ -88,6 +86,12 @@ form input {
   margin-bottom: 0.5rem;
 }
 
+form input:focus {
+  outline: none;
+  border: 1px solid orange;
+  
+}
+
 #name {
   margin-top: 0.6rem;
 }
@@ -95,6 +99,11 @@ form input {
 form textarea {
   padding-left: 0.5rem;
   resize: none;
+}
+
+textarea:focus {
+  outline: none;
+  border: 1px dashed orange;
 }
 
 #send {
