--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,9 @@
 }
 
 body {
-  background-color: rgb(5, 5, 5);
+  background-image: url(/image/flat-mountains.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Bungee Shade', sans-serif, ;
 }
 
